# LinkletDB

./: CMakeLists.txt  LICENSE
include/storage/: operators.h  physical_coo.h
storage/: CMakeLists.txt
storage/operators/: is_reachable_coo_char_array.c
tests/naive_tests/: CMakeLists.txt  naive_tests.c  naive_tests.h
tests/naive_tests/storage/operators/: naive_test_is_reachable_coo_char_array.c
